# hgrm

./: .gitignore  CMakeLists.txt  README.md
docs/: online_covariance.tex  refs.bib
include/: HaplotypeVcfParser.h  Matrix.h  utils.h
src/: HaplotypeDataRecord.cpp  HaplotypeVcfParser.cpp  Matrix.cpp  main.cpp  utils.cpp
tests/: test.vcf  test_haplotype_data_record.cpp  test_haplotype_vcf_parser.cpp  test_matrix.cpp  test_utils.cpp
